--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bullmq": "^5.66.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "ioredis": "^5.8.2",
     "lucide-react": "^0.562.0",
